Use direct members instead of abstractions.